# iced-multi-window

./: .gitignore  Cargo.toml  README.md  bacon.toml  flake.nix
iced-multi-window-macros/: Cargo.toml
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs
